--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -605,6 +605,28 @@
 
        </TABLE>
          
+       
+       <TABLE cellSpacing=0 cellPadding=0 width=150 border=0>
+        <TR height=22>
+          <TD style="PADDING-LEFT: 30px" background="{{ asset('images/admin/menu_bt.jpg')}}"><A 
+            class=menuParent onclick=expand(17) 
+            href="javascript:void(0);">紧急广告管理</A></TD></TR>
+        <TR height=4>
+          <TD></TD></TR></TABLE>
+      <TABLE id=child17 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
+      width=150 border=0>
+
+      <TR height=20>
+          <TD align=middle width=30><IMG height=9 
+            src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
+          <TD><A class=menuChild 
+            href="{{ path('_admin_emergencyAnnouncement') }}" 
+            target=main>紧急公告内容设定</A></TD></TR>   
+              <TR height=4>
+          <TD colSpan=2></TD></TR>
+
+       </TABLE>
+         
           
       </BODY></HTML>
     
