--- a/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
@@ -39,7 +39,7 @@ $(document).ready(function() {
 });
 function change(){
 		if($("#over").html()>=0){
-      var filter = /^1[3|5|8][0-9]\d{4,8}$/;
+      var filter = /^1[3|4|5|8][0-9]\d{4,8}$/;
       if(existMobile=='' || $("#existMobile").val()!=''){
         if($("#mobile").val()==''){
             $("#error").html("<font color='red'>请输入您的手机号码</font>");
