--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -477,7 +477,7 @@ function addClass(id){
           <th>任务类型</th>
           <th>任务名称</th>
           <th>奖励积分</th>
-          <th>任务领取时间</th>
+          <th>更新时间</th>
           <th>任务状态</th>
         </tr>     
          {% for item in adtaste %}
