--- a/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/help.html.twig
@@ -45,7 +45,7 @@ function sendContent(){
 <div class="topBtn"><a href="#"><img
 	src="{{ asset('other/topBtn.jpg') }}"></a></div>
 <article>
-<h2><img src="{{ asset('images/helpTitle.jpg') }}"><a
+<h2><img src="{{ asset('images/helpTitle.jpg') }}" alt="帮助中心"><a
 	href="#" class="qaBtn hover">问题反馈</a></h2>
 <ul class="tabs-nav">
 	<li class="hover"><a href="#">购物返利</a></li>
