--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -267,7 +267,7 @@ function selectCity_amazon(){
 </script>
 <header>
   <section>
-    <div id="logo"><a href="{{ path('_default_index') }}"><img src="{{ asset('images/logo.gif')}}"></a></div>
+    <div id="logo"><a href="{{ path('_default_index') }}"><img src="{{ asset('images/logo.gif')}}" alt="积粒网"></a></div>
     <nav id="menu">
       <ul>
         <li class="{% if app.request.attributes.get('_route') == '_default_index' %} navSelectedBg {% endif %}"><a href="{{ path('_default_index') }}">首页</a></li>
