--- a/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
@@ -104,9 +104,7 @@ function changePoint(){
       <input type="hidden" name="rechange" id="changes"/>
       <div class="changePoint mt50">本次充值所需米粒：<span class="rechangeMi">1015</span></div>
       <div class="changePoint">兑换后剩余米粒：<span id="over">{{ points-1015 }}</span></div>
-      <div><span id="error">
-     
-     </span></div>
+      <div><span id='error' style="color:red">{{code}}</span></div>
       <div class="btnArea mt50"><img id="active" onclick="change();" src="{{ asset('images/changeEnterBtn.jpg')}}" width="175" height="60">
       <img id="unactive" src="{{ asset('images/changeEnterBtn_unactive.jpg')}}" width="175" height="60"></div>
     </div>
