--- a/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/reg.html.twig
@@ -56,6 +56,7 @@
          </li>
         <li><dd></dd><dt><!--  <a class="regBtn" href="#">发送验证邮件</a>-->
         <input type='button' id='reg' class='regBtn' value='快速注册'/>
+        <div class="regPrompt">注册当天签到即送<em>{{checkInPoint}}</em>积分</div>
         </dt></li></form>
     </ul>
     <div class="loginArea">我已经注册，现在就<a class="login" href="{{ path('_user_login') }}">登录</a></div>
