--- a/src/Jili/EmarBundle/Resources/views/base.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/base.html.twig
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+{% block stylesheets %}
+{% endblock %}
+
+{% block javascirpts %}
     <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+{% endblock %}
 
 </head>
 
