--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeIn.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeIn.html.twig
@@ -3,10 +3,17 @@
 <HEAD>
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
+<SCRIPT LANGUAGE="JavaScript">
+function check() {
+	alert("确认提交吗？")
+	document.getElementById("submit").disabled='disabled';
+return false;
+}
+</SCRIPT>
 
 </HEAD>
 <BODY>
-<form action="{{ path('_admin_exchangeIn') }}" method="post" id="form1" enctype="multipart/form-data" >
+<form action="{{ path('_admin_exchangeIn') }}" method="post" id="form1" enctype="multipart/form-data" onSubmit="check();">
 <table align='center'>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td>csv导入:
@@ -15,7 +22,7 @@
    <option value="{{ item.id }}" {% if item.id == exType %} selected = "selected" {% endif %}>{{ item.type }}</option>
   {% endfor %}
 </select>
-<input type="file" name="csv" /></td><td><input type="submit" name="add" value="提 交"/></td></tr>
+<input type="file" name="csv" /></td><td><input id="submit" type="submit" name="add" value="提 交"/></td></tr>
 
 {% if success %}
 {% if success == 1 %}
