--- a/web/css/default.css
+++ b/web/css/default.css
@@ -258,6 +258,7 @@ footer section a:hover{
 	margin: auto;
 	padding:0 0 140px 0;
 	display:table;
+	position: relative;
 }
 #loginFrame{
 	background-color: #FFF;
