--- a/web/css/default.css
+++ b/web/css/default.css
@@ -259,6 +259,7 @@ footer section a:hover{
 	padding:0 0 140px 0;
 	display:table;
 	position: relative;
+	z-index:auto;
 }
 #loginFrame{
 	background-color: #FFF;
